Added Swagger annotations for the User endpoints
